--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,77 @@
-body{
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    position: relative;
-    box-sizing: border-box;
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #000;
-    text-transform: uppercase;
-    text-align: center;
-    background-color: #424141;
+*,
+*::before,
+*::after {
+  margin: 0px;
+  padding: 0px;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
+}
+h1 {
+  font-size: 70px;
+}
+h2 {
+  font-size: 30px;
+}
+span {
+  font-size: 70px;
 }
 .container {
-    width: 650px;
-    background-color: #fff;
-    height: 350px;
-    box-shadow: 6px 8px 20px #4d484c;
-    display: block;
-    position: relative;
+  width: 100%;
+  height: 100vh;
+  background-color: #718093;
+  padding: 150px 0px;
 }
-.clock-container {
-    width: 420px;
-    height: 120px;
-    background-color: #375671d9;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 50px;
-    box-shadow: 6px 8px 20px #4d484c;
+.clock {
+  width: 600px;
+  height: 250px;
+  background-color: #22a6b3;
+  padding: 30px;
+  margin: auto;
 }
-.colon {
-    display: inline-block;
-    font-size: 30px;
-    padding-top: 18px;
+.colck-container {
+  width: 100%;
+  height: 100px;
+  display: inline-flex;
+  text-align: center;
+  margin: 50px 0px;
+  background-color: white;
 }
-.clock-container p{
-    font-size: 70px;
-    color: #fff;
-    font-weight: 600;
+#hours {
+  width: 165px;
+  height: 150px;
+  padding: 0px 30px;
+  margin: -50px 0px;
+}
+#minutes {
+  width: 170px;
+  height: 150px;
+  padding: 0px 30px;
+  margin: -50px 0px;
 }
 
-.container .bottom{
-    width: 100%;
-    height: 8px;
-    position: absolute;
-    bottom: 0;
-    background-color: #aaa4b2;
+#secoend {
+  width: 175px;
+  height: 150px;
+  padding: 0px 30px;
+  margin: -50px 0px;
 }
-.progress-bar{
-    width: 250px;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    z-index: 5;
-    background-color: #615770;
-    transition: .3s;
+#hours h2 {
+  color: white;
+}
+#minutes h2 {
+  color: white;
+}
+#secoend h2 {
+  color: white;
+  margin: 0px 0px 0px -15px;
+}
+.animated {
+  width: 600px;
+  height: auto;
+  margin: auto;
+}
+
+#secoensContaingAnimationbar {
+  height: 10px;
+  background: #2c3a47;
 }
